tests/consteval_diag_invalid_span_bad.stderr
tests/consteval_diag_invalid_span_bad.hop:7:20: error: HOP2074: diagnostic span is invalid
